# guest

Demo/battleDemo/: common.py  main.py  param.py  test.py  xls.py
Demo/webSocketDemo/: Demo.py  guido.py  webTest.py
Demo/webSocketDemo/LittePaiMeng/: .env  .env.prod  README.md  pyproject.toml
Demo/webSocketDemo/LittePaiMeng/go-cqhttp/: config.yml  device.json
Demo/webSocketDemo/LittePaiMeng/go-cqhttp/data/images/: LOG
Demo/webSocketDemo/LittePaiMeng/go-cqhttp/data/leveldb-v3/: LOG
Demo/webSocketDemo/LittePaiMeng/go-cqhttp/data/videos/: LOG
Demo/webSocketDemo/base/: get_fruits.py  main.py  output.py  process.py
Python-100-Days-master/Day01-15/code/Day01/: demo.py  demo2.py
Python-100-Days-master/Day01-15/code/Day09/: demo.py
Python-100-Days-master/Day01-15/code/Day11/: demo.py
Python-100-Days-master/Day01-15/code/Day13/: deno.py
Python-100-Days-master/Day16-20/: demo.py
Python-100-Days-master/Day36-40/code/contact/: create_test.py  delete_test.py  ext_data.py  select_test.py  update_test.py
Python-100-Days-master/Day61-65/: 64.demo.py  demo1.py  demo2.py
Python-100-Days-master/Day91-100/: 100.Python面试题实录.md  97.demo.py
Python-100-Days-master/demo/: demo.sqlproj
Python-100-Days-master/demoapi/: result.json  scrapy.cfg  豆瓣电影数据.xlsx
Python-100-Days-master/demoapi/demoapi/: items.py  middlewares.py  pipelines.py  settings.py
Python-100-Days-master/demoapi/demoapi/spiders/: douban.py
